--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "version": "0.0.8",
   "author": "Matthew Eernisse <mde@fleegix.org> (http://fleegix.org)",
   "main": "./lib/index.js",
+  "scripts": {
+    "test": "jake test"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/mde/model.git"
