--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "utilities": "0.0.x",
     "mongodb-wrapper": "0.4.x",
-    "pg": "0.9.x"
+    "pg": "0.9.x",
+    "level": "0.17.x"
   },
   "devDependencies": {
     "jake": "0.7.x"
