--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "riak",
     "mongo",
     "mongodb"
+    "leveldb"
+    "sqlite"
   ],
   "version": "0.3.1",
   "author": "Matthew Eernisse <mde@fleegix.org> (http://fleegix.org)",
@@ -29,6 +31,7 @@
     "mongodb-wrapper": "0.4.x",
     "pg": "0.9.x",
     "level": "0.17.x"
+    "sqlite3": "2.1.x"
   },
   "devDependencies": {
     "jake": "0.7.x"
