--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "postgres",
     "riak",
     "mongo",
-    "mongodb"
-    "leveldb"
+    "mongodb",
+    "leveldb",
     "sqlite"
   ],
   "version": "0.3.1",
@@ -30,7 +30,7 @@
     "utilities": "0.0.x",
     "mongodb-wrapper": "0.4.x",
     "pg": "0.9.x",
-    "level": "0.17.x"
+    "level": "0.17.x",
     "sqlite3": "2.1.x"
   },
   "devDependencies": {
