--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ before_script:
   - sudo cp ./pg_hba.conf /etc/postgresql/9.2/main
   - sudo /etc/init.d/postgresql start
   - psql -c 'create database model_test;' -U postgres
-  - sudo apt-get install mysql-server
+  - sudo apt-get install mysql-server mysql-client
+  - mysql -u root -e "CREATE DATABASE model_test COLLATE latin1_general_cs;"
   - sudo apt-get install sqlite3 libsqlite3-dev
 
 script: jake test
