--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "url": "git://github.com/mde/model.git"
   },
   "dependencies": {
-    "utilities": "0.0.x",
-    "mongodb-wrapper": "0.4.x",
-    "pg": "2.5.x",
-    "level": "0.17.x",
-    "mysql": "2.0.x",
-    "sqlite3": "2.1.x"
+    "utilities": "0.0.x"
   },
   "devDependencies": {
-    "jake": "0.7.x"
+    "jake": "0.7.x",
+    "mongodb-wrapper": "0.4.x",
+    "pg": "2.5.x",
+    "mysql": "2.0.x",
+    "level": "0.17.x",
+    "sqlite3": "2.1.x"
   },
   "engines": {
     "node": "*"
