--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "jake": "0.7.x",
-    "mongodb-wrapper": "0.4.x",
+    "mongodb": "1.3.x",
     "pg": "2.5.x",
     "mysql": "2.0.x",
     "level": "0.17.x",
