started work on rest-adapter: couple tests already passing

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "url": "git://github.com/geddy/model.git"
   },
   "dependencies": {
-    "utilities": "0.0.x"
+    "utilities": "0.0.x",
+    "rest-js": "0.0.x"
   },
   "devDependencies": {
     "jake": "0.7.x",
@@ -36,7 +37,8 @@
     "pg": "2.5.x",
     "mysql": "2.0.x",
     "level": "0.17.x",
-    "sqlite3": "2.1.x"
+    "sqlite3": "2.1.x",
+    "restify": "^2.8.1"
   },
   "engines": {
     "node": "*"
