--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "mysql": "2.0.x",
     "level": "0.17.x",
     "sqlite3": "2.1.x",
-    "restify": "^2.8.1"
+    "restify": "2.8.x"
   },
   "engines": {
     "node": "*"
